# TradingAgents

./: .gitignore  main.py  pyproject.toml
cli/: main.py
tradingagents/agents/utils/: memory.py
tradingagents/dataflows/: interface.py
