[project]
name = "tradingagents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "akshare==1.17.62",
    "backtrader==1.9.78.123",
    "chainlit==2.8.2",
    "chromadb==1.1.0",
    "eodhd==1.0.32",
    "feedparser==6.0.12",
    "finnhub-python==2.4.25",
    "langchain-anthropic==0.3.21",
    "langchain-experimental==0.3.4",
    "langchain-google-genai==2.1.12",
    "langchain-openai==0.3.23",
    "langgraph==1.0.0a4",
    "pandas==2.3.3",
    "parsel==1.10.0",
    "praw==7.8.1",
    "pytz==2025.2",
    "questionary==2.1.1",
    "redis==6.4.0",
    "requests==2.32.5",
    "rich==14.1.0",
    "setuptools==80.9.0",
    "stockstats==0.6.5",
    "tqdm==4.67.1",
    "tushare==1.4.24",
    "typing-extensions==4.15.0",
    "yfinance==0.2.66",
]
